--- a/NubeBooks/Views/Admin/Comprobante.cshtml
+++ b/NubeBooks/Views/Admin/Comprobante.cshtml
@@ -482,7 +482,7 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-sm-12">
-                            <label>Comentarios Adicionales</label>
+                            <label>Comentarios</label>
                             @*<textarea class="form-control" cols="20" id="comentario" name="comentario" rows="3" style="resize: none;" type="text"></textarea>*@
                             @Html.TextAreaFor(u => u.Comentario, new { @class = "form-control rol-accs", @placeholder = "Comentario", @type = "text", @rows = "3", @style = "resize: none;" })
                             @Html.ValidationMessageFor(u => u.Comentario)
